[gd_scene load_steps=13 format=2]

[ext_resource path="res://projectiles/rocket/explosion.png" type="Texture" id=1]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/effects/portals/portal_scene.gd" type="Script" id=2]
[ext_resource path="res://mods-unpacked/QianMo-QMtato/content/effects/portals/portal_particle.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/melee/dagger/4/dagger_4_effect.tres" type="Resource" id=4]
[ext_resource path="res://weapons/ranged/sniper_gun/3/sniper_gun_3_data.tres" type="Resource" id=5]
[ext_resource path="res://weapons/ranged/flamethrower/2/flamethrower_2_data.tres" type="Resource" id=6]
[ext_resource path="res://weapons/ranged/taser/1/taser_data.tres" type="Resource" id=7]
[ext_resource path="res://weapons/ranged/rocket_launcher/2/rocket_launcher_2_data.tres" type="Resource" id=8]
[ext_resource path="res://weapons/ranged/shuriken/1/shuriken_data.tres" type="Resource" id=9]
[ext_resource path="res://weapons/ranged/wand/1/wand_data.tres" type="Resource" id=10]
[ext_resource path="res://weapons/ranged/shredder/1/shredder_data.tres" type="Resource" id=12]

[sub_resource type="CircleShape2D" id=1]

[node name="PortalArea" type="Area2D"]
modulate = Color( 1, 1, 1, 0.313726 )
scale = Vector2( 10, 10 )
collision_layer = 0
collision_mask = 31
monitorable = false
script = ExtResource( 2 )
portal_particle = ExtResource( 3 )
weapon_datas = [ ExtResource( 6 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ) ]
gold_on_kill_effect = ExtResource( 4 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Collision"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="ChangePositionTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_PortalArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_PortalArea_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_PortalArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_PortalArea_body_exited"]
[connection signal="timeout" from="ChangePositionTimer" to="." method="_on_ChangePositionTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
